# archwatch

./: .gitignore  ArchWatch-PRD.docx  Cargo.toml  archwatch-mockup.html  archwatch-tui-mockup.html
frontend/: app.js  index.html  style.css
src/: cli.rs  git_diff.rs  main.rs
src/analyzer/: graph.rs  mod.rs  rust_parser.rs  scanner.rs  ts_parser.rs
src/server/: mod.rs  routes.rs  state.rs
src/watcher/: mod.rs
