[package]
name = "archwatch"
version = "0.1.0"
edition = "2021"
description = "Live architecture diagrams for your codebase"
license = "MIT"
default-run = "aw"

[[bin]]
name = "aw"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime + web server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Code parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Frontend embedding
rust-embed = { version = "8", features = ["mime-guess"] }

# Utilities
open = "5"
walkdir = "2"
mime_guess = "2"
anyhow = "1.0.102"
